kubernetes/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app
spec:
  selector:
    app: rails-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort  # This will make it accessible via minikube
